<resources>
    <string name="app_name">AppLaSazon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_comida">Comida</string>
    <string name="valetcorreo">Correo</string>
    <string name="valetpassword">Password</string>
    <string name="valbtniniciosesion">Iniciar Sesión</string>
    <string name="valbtnregistro">Registrese Aquí</string>
    <string name="valbtnregistrarusuario">Registrar</string>
    <string name="valbtnvolverlogin">Volver al Login</string>
    <string name="Encontrarnos">¡Ubicanos!</string>
    <string name="enter">Entrar \nGoogle Maps</string>
    <string name="ct">¡Nos alegra que estes interesad@ en contactarnos\aqui te mostramos las maneras de como hacerlo!</string>
    <string name="correop">CORREO\n</string>
    <string name="D">Dominic\n</string>
    <string name="K">Kevin</string>
    <string name="r">Angelo</string>
    <string name="action_salir">Salir\n</string>
    <string name="action_recomendacion">Recomendacion</string>
    <string name="menu_contactenos">Contactenos</string>
    <string name="sesion_iniciado">Sesion iniciada</string>
    <string name="bienvenido">Bienvenida a La Sazon</string>
    <string name="sesioniniciado">Sesion iniciada</string>
    <string name="menu_portada">Portada</string>
    <string name="tituport">Les damos la bienvenida a "La Sazon"</string>
</resources>