<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/Encontrarnos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_contactenos" />
        <item
            android:id="@+id/comidaListFragment"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_comida" />
    </group>
</menu>